--- a/index.html
+++ b/index.html
@@ -2,13 +2,38 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>BagItUp | Login</title>
+    <link rel="stylesheet" href="style.css" />
 </head>
 
 <body>
+    <div class="login-container">
+        <div class="login-box">
+            <h1 class="logo">🛍️ BagItUp</h1>
+            <h2>Welcome Back</h2>
+            <p class="subtitle">Log in to continue shopping in style.</p>
 
+            <form>
+                <div class="input-group">
+                    <label>Email</label>
+                    <input type="email" placeholder="Enter your email" />
+                </div>
+
+                <div class="input-group">
+                    <label>Password</label>
+                    <input type="password" placeholder="Enter your password" />
+                </div>
+
+                <button type="submit" class="login-btn">Login</button>
+            </form>
+
+            <p class="register-text">
+                New to BagItUp? <a href="#">Create an account</a>
+            </p>
+        </div>
+    </div>
 </body>
 
 </html>
