--- a/home.html
+++ b/home.html
@@ -10,7 +10,7 @@
 
 <body>
     <nav class="navbar">
-        <div class="logo">BagItUp</div>
+        <div class="logo"><img src="images/logo.png" alt="Logo" /></div>
 
         <div class="search-bar">
             <input type="text" placeholder="Search eco-friendly bags...">
@@ -18,7 +18,7 @@
         </div>
 
         <div class="nav-icons">
-            <a href="#"><span>🛒</span></a>
+            <a href="addtocart.html"><span><img src="images/addtocart.png" class="cart-icon" alt="Cart" /></span></a>
             <a href="#"><span>👤</span></a>
         </div>
     </nav>
