--- a/login.html
+++ b/login.html
@@ -11,7 +11,7 @@
 <body>
     <div class="login-container">
         <div class="login-box">
-            <h1 class="logo"><img src="images/bagitup2.png" alt="Logo" />BagItUp</h1>
+            <h1 class="logo"><img src="images/logo.png" alt="Logo" />BagItUp</h1>
             <h2>Welcome Back</h2>
             <p class="subtitle">Log in to continue shopping in style.</p>
 
