--- a/home.html
+++ b/home.html
@@ -9,19 +9,26 @@
 </head>
 
 <body>
-    <nav class="navbar">
-        <div class="logo"><img src="images/logo.png" alt="Logo" /></div>
-
-        <div class="search-bar">
-            <input type="text" placeholder="Search eco-friendly bags...">
-            <button>Search</button>
-        </div>
-
-        <div class="nav-icons">
-            <a href="addtocart.html"><span><img src="images/addtocart.png" class="cart-icon" alt="Cart" /></span></a>
-            <a href="#"><span>👤</span></a>
-        </div>
+    <div class="navbar-container">
+        <nav class="navbar">
+            <div class="logo"><img src="images/logo.png" alt="Logo" /></div>
+            <div class="search-bar">
+                <input type="text" id="search" placeholder="Search eco-friendly bags...">
+                <button><img src="images/searchicon.png" alt="Search" class="search-icon"></button>
+            </div>
+            <div class="nav-icons">
+                <a href="addtocart.html"><span><img src="images/addtocart.png" class="cart-icon"
+                            alt="Cart" /></span></a>
+                <a href="login.html" class="sign-in-btn">Sign In</a>
+            </div>
+        </nav>
+    </div>
     </nav>
+    </div>
+    <main class="content">
+        <!-- Main content will go here -->
+    </main>
+    <script defer src="home.js"></script>
 </body>
 
 </html>
