added product cards

--- a/coming-soon.html
+++ b/coming-soon.html
@@ -29,7 +29,8 @@
     <div class="page-container">
         <div class="page-header">
             <h1 class="page-title">Coming Soon</h1>
-            <p class="page-subtitle">This category is being curated with the finest sustainable products. Check back soon for amazing eco-friendly options!</p>
+            <p class="page-subtitle">This category is being curated with the finest sustainable products. Check back
+                soon for amazing eco-friendly options!</p>
         </div>
 
         <div class="products-container">
@@ -37,7 +38,7 @@
                 <div style="font-size: 4rem; margin-bottom: 20px;">🌱</div>
                 <h2 style="color: #f5f5f7; margin-bottom: 20px;">We're Working on Something Amazing</h2>
                 <p style="font-size: 1.1rem; max-width: 500px; margin: 0 auto; line-height: 1.6;">
-                    Our team is carefully selecting the most sustainable and high-quality products for this category. 
+                    Our team is carefully selecting the most sustainable and high-quality products for this category.
                     We'll notify you as soon as new items arrive!
                 </p>
                 <div style="margin-top: 40px;">
