--- a/menswear/mens-tshirts.html
+++ b/menswear/mens-tshirts.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Men's T-Shirts | BagItUp</title>
     <link rel="stylesheet" href="../products.css">
+    <script defer src="../products.js"></script>
 </head>
 
 <body>
@@ -29,7 +30,8 @@
     <div class="page-container">
         <div class="page-header">
             <h1 class="page-title">Men's T-Shirts</h1>
-            <p class="page-subtitle">Discover our collection of sustainable and comfortable men's t-shirts, crafted with eco-friendly materials for the modern conscious consumer.</p>
+            <p class="page-subtitle">Discover our collection of sustainable and comfortable men's t-shirts, crafted with
+                eco-friendly materials for the modern conscious consumer.</p>
         </div>
 
         <div class="products-container">
@@ -39,8 +41,12 @@
                     <div class="product-image">Eco Cotton Tee</div>
                     <h3 class="product-name">Organic Cotton Classic Tee</h3>
                     <div class="product-price">₹899</div>
-                    <p class="product-description">100% organic cotton t-shirt with a comfortable fit. Made from sustainably sourced materials.</p>
-                    <button class="add-to-cart-btn">Add to Cart</button>
+                    <p class="product-description">100% organic cotton t-shirt with a comfortable fit. Made from
+                        sustainably sourced materials.</p>
+                    <button class="add-to-cart-btn">
+                        <span class="button-text">Add to Cart</span>
+                        <span class="tick-mark">✓</span>
+                    </button>
                 </div>
 
                 <!-- Product 2 -->
@@ -48,8 +54,12 @@
                     <div class="product-image">Bamboo Blend Tee</div>
                     <h3 class="product-name">Bamboo Fiber V-Neck</h3>
                     <div class="product-price">₹1,199</div>
-                    <p class="product-description">Soft bamboo fiber blend with natural antibacterial properties and moisture-wicking capabilities.</p>
-                    <button class="add-to-cart-btn">Add to Cart</button>
+                    <p class="product-description">Soft bamboo fiber blend with natural antibacterial properties and
+                        moisture-wicking capabilities.</p>
+                    <button class="add-to-cart-btn">
+                        <span class="button-text">Add to Cart</span>
+                        <span class="tick-mark">✓</span>
+                    </button>
                 </div>
 
                 <!-- Product 3 -->
@@ -57,8 +67,12 @@
                     <div class="product-image">Recycled Polyester Tee</div>
                     <h3 class="product-name">Recycled Performance Tee</h3>
                     <div class="product-price">₹1,099</div>
-                    <p class="product-description">Made from 100% recycled plastic bottles. Perfect for workouts and casual wear.</p>
-                    <button class="add-to-cart-btn">Add to Cart</button>
+                    <p class="product-description">Made from 100% recycled plastic bottles. Perfect for workouts and
+                        casual wear.</p>
+                    <button class="add-to-cart-btn">
+                        <span class="button-text">Add to Cart</span>
+                        <span class="tick-mark">✓</span>
+                    </button>
                 </div>
 
                 <!-- Product 4 -->
@@ -66,7 +80,8 @@
                     <div class="product-image">Hemp Cotton Blend</div>
                     <h3 class="product-name">Hemp-Cotton Crew Neck</h3>
                     <div class="product-price">₹1,299</div>
-                    <p class="product-description">Durable hemp-cotton blend that gets softer with each wash. Naturally UV resistant.</p>
+                    <p class="product-description">Durable hemp-cotton blend that gets softer with each wash. Naturally
+                        UV resistant.</p>
                     <button class="add-to-cart-btn">Add to Cart</button>
                 </div>
 
@@ -75,7 +90,8 @@
                     <div class="product-image">Tencel Lyocell Tee</div>
                     <h3 class="product-name">Tencel Lyocell Henley</h3>
                     <div class="product-price">₹1,399</div>
-                    <p class="product-description">Ultra-soft Tencel Lyocell fabric with natural temperature regulation and moisture management.</p>
+                    <p class="product-description">Ultra-soft Tencel Lyocell fabric with natural temperature regulation
+                        and moisture management.</p>
                     <button class="add-to-cart-btn">Add to Cart</button>
                 </div>
 
@@ -84,7 +100,8 @@
                     <div class="product-image">Peace Silk Blend</div>
                     <h3 class="product-name">Peace Silk Luxury Tee</h3>
                     <div class="product-price">₹1,899</div>
-                    <p class="product-description">Premium peace silk blend for ultimate comfort and breathability. Ethically sourced materials.</p>
+                    <p class="product-description">Premium peace silk blend for ultimate comfort and breathability.
+                        Ethically sourced materials.</p>
                     <button class="add-to-cart-btn">Add to Cart</button>
                 </div>
 
@@ -93,7 +110,8 @@
                     <div class="product-image">Organic Linen Tee</div>
                     <h3 class="product-name">Organic Linen Pocket Tee</h3>
                     <div class="product-price">₹1,199</div>
-                    <p class="product-description">Breathable organic linen perfect for summer. Features a classic chest pocket design.</p>
+                    <p class="product-description">Breathable organic linen perfect for summer. Features a classic chest
+                        pocket design.</p>
                     <button class="add-to-cart-btn">Add to Cart</button>
                 </div>
 
@@ -102,7 +120,8 @@
                     <div class="product-image">Pima Cotton Tee</div>
                     <h3 class="product-name">Pima Cotton Long Sleeve</h3>
                     <div class="product-price">₹1,599</div>
-                    <p class="product-description">Extra-long staple Pima cotton for superior softness and durability. Long sleeve design for versatility.</p>
+                    <p class="product-description">Extra-long staple Pima cotton for superior softness and durability.
+                        Long sleeve design for versatility.</p>
                     <button class="add-to-cart-btn">Add to Cart</button>
                 </div>
             </div>
