--- a/new-arrivals.html
+++ b/new-arrivals.html
@@ -29,7 +29,8 @@
     <div class="page-container">
         <div class="page-header">
             <h1 class="page-title">New Arrivals</h1>
-            <p class="page-subtitle">Discover the latest in sustainable fashion. Fresh designs crafted with innovative eco-friendly materials.</p>
+            <p class="page-subtitle">Discover the latest in sustainable fashion. Fresh designs crafted with innovative
+                eco-friendly materials.</p>
         </div>
 
         <div class="products-container">
@@ -39,7 +40,8 @@
                     <div class="product-image">Bio Fabric Jacket</div>
                     <h3 class="product-name">Bio-Fabric Tech Jacket</h3>
                     <div class="product-price">₹4,999</div>
-                    <p class="product-description">Revolutionary bio-fabricated jacket made from lab-grown materials. Weather resistant and biodegradable.</p>
+                    <p class="product-description">Revolutionary bio-fabricated jacket made from lab-grown materials.
+                        Weather resistant and biodegradable.</p>
                     <button class="add-to-cart-btn">Add to Cart</button>
                 </div>
 
@@ -48,7 +50,8 @@
                     <div class="product-image">Mushroom Leather Bag</div>
                     <h3 class="product-name">Mycelium Leather Tote</h3>
                     <div class="product-price">₹3,499</div>
-                    <p class="product-description">Innovative mushroom leather tote bag. Cruelty-free alternative with unique texture and durability.</p>
+                    <p class="product-description">Innovative mushroom leather tote bag. Cruelty-free alternative with
+                        unique texture and durability.</p>
                     <button class="add-to-cart-btn">Add to Cart</button>
                 </div>
 
@@ -57,7 +60,8 @@
                     <div class="product-image">Algae-Based Sneakers</div>
                     <h3 class="product-name">Algae Foam Sneakers</h3>
                     <div class="product-price">₹5,999</div>
-                    <p class="product-description">Cutting-edge sneakers with algae-based foam soles. Carbon-negative production process.</p>
+                    <p class="product-description">Cutting-edge sneakers with algae-based foam soles. Carbon-negative
+                        production process.</p>
                     <button class="add-to-cart-btn">Add to Cart</button>
                 </div>
 
@@ -66,7 +70,8 @@
                     <div class="product-image">Solar Charging Backpack</div>
                     <h3 class="product-name">Solar Panel Backpack</h3>
                     <div class="product-price">₹6,999</div>
-                    <p class="product-description">Smart backpack with integrated solar panels. Charge your devices while reducing your carbon footprint.</p>
+                    <p class="product-description">Smart backpack with integrated solar panels. Charge your devices
+                        while reducing your carbon footprint.</p>
                     <button class="add-to-cart-btn">Add to Cart</button>
                 </div>
 
@@ -75,7 +80,8 @@
                     <div class="product-image">Seaweed Fiber Dress</div>
                     <h3 class="product-name">Seaweed Fiber Dress</h3>
                     <div class="product-price">₹2,999</div>
-                    <p class="product-description">Elegant dress made from seaweed-derived fibers. Natural color-changing properties based on pH levels.</p>
+                    <p class="product-description">Elegant dress made from seaweed-derived fibers. Natural
+                        color-changing properties based on pH levels.</p>
                     <button class="add-to-cart-btn">Add to Cart</button>
                 </div>
 
@@ -84,7 +90,8 @@
                     <div class="product-image">Cork Yoga Mat</div>
                     <h3 class="product-name">Premium Cork Yoga Mat</h3>
                     <div class="product-price">₹2,499</div>
-                    <p class="product-description">Sustainable cork yoga mat with natural antimicrobial properties and superior grip.</p>
+                    <p class="product-description">Sustainable cork yoga mat with natural antimicrobial properties and
+                        superior grip.</p>
                     <button class="add-to-cart-btn">Add to Cart</button>
                 </div>
             </div>
