--- a/womens-tops.html
+++ b/womens-tops.html
@@ -29,7 +29,8 @@
     <div class="page-container">
         <div class="page-header">
             <h1 class="page-title">Women's Tops & Tees</h1>
-            <p class="page-subtitle">Sustainable and stylish tops crafted from eco-friendly materials. From casual tees to elegant blouses.</p>
+            <p class="page-subtitle">Sustainable and stylish tops crafted from eco-friendly materials. From casual tees
+                to elegant blouses.</p>
         </div>
 
         <div class="products-container">
@@ -39,7 +40,8 @@
                     <div class="product-image">Organic Cotton Tee</div>
                     <h3 class="product-name">Organic Cotton Basic Tee</h3>
                     <div class="product-price">₹799</div>
-                    <p class="product-description">Soft organic cotton t-shirt in a relaxed fit. Perfect wardrobe staple in multiple colors.</p>
+                    <p class="product-description">Soft organic cotton t-shirt in a relaxed fit. Perfect wardrobe staple
+                        in multiple colors.</p>
                     <button class="add-to-cart-btn">Add to Cart</button>
                 </div>
 
@@ -48,7 +50,8 @@
                     <div class="product-image">Bamboo Tank Top</div>
                     <h3 class="product-name">Bamboo Fiber Tank</h3>
                     <div class="product-price">₹899</div>
-                    <p class="product-description">Breathable bamboo tank top with natural UV protection and moisture-wicking properties.</p>
+                    <p class="product-description">Breathable bamboo tank top with natural UV protection and
+                        moisture-wicking properties.</p>
                     <button class="add-to-cart-btn">Add to Cart</button>
                 </div>
 
@@ -57,7 +60,8 @@
                     <div class="product-image">Tencel Blouse</div>
                     <h3 class="product-name">Tencel Flowing Blouse</h3>
                     <div class="product-price">₹1,599</div>
-                    <p class="product-description">Elegant Tencel blouse with beautiful drape and temperature regulation. Perfect for work or dinner.</p>
+                    <p class="product-description">Elegant Tencel blouse with beautiful drape and temperature
+                        regulation. Perfect for work or dinner.</p>
                     <button class="add-to-cart-btn">Add to Cart</button>
                 </div>
 
@@ -66,7 +70,8 @@
                     <div class="product-image">Hemp Crop Top</div>
                     <h3 class="product-name">Hemp-Cotton Crop Top</h3>
                     <div class="product-price">₹1,099</div>
-                    <p class="product-description">Trendy crop top made from hemp-cotton blend. Durable and gets softer with each wash.</p>
+                    <p class="product-description">Trendy crop top made from hemp-cotton blend. Durable and gets softer
+                        with each wash.</p>
                     <button class="add-to-cart-btn">Add to Cart</button>
                 </div>
 
@@ -75,7 +80,8 @@
                     <div class="product-image">Peace Silk Camisole</div>
                     <h3 class="product-name">Peace Silk Camisole</h3>
                     <div class="product-price">₹1,799</div>
-                    <p class="product-description">Luxurious peace silk camisole with adjustable straps. Ethically sourced and incredibly soft.</p>
+                    <p class="product-description">Luxurious peace silk camisole with adjustable straps. Ethically
+                        sourced and incredibly soft.</p>
                     <button class="add-to-cart-btn">Add to Cart</button>
                 </div>
 
@@ -84,7 +90,8 @@
                     <div class="product-image">Linen Button-Up</div>
                     <h3 class="product-name">Organic Linen Shirt</h3>
                     <div class="product-price">₹1,399</div>
-                    <p class="product-description">Classic linen button-up shirt. Breathable and perfect for warm weather styling.</p>
+                    <p class="product-description">Classic linen button-up shirt. Breathable and perfect for warm
+                        weather styling.</p>
                     <button class="add-to-cart-btn">Add to Cart</button>
                 </div>
             </div>
