--- a/home.html
+++ b/home.html
@@ -9,6 +9,13 @@
 </head>
 
 <body>
+    <!-- Snow Stars Animation -->
+    <div class="snow-stars"></div>
+    <div class="snow-stars snow-stars-2"></div>
+    <div class="snow-stars snow-stars-3"></div>
+    <div class="snow-stars snow-stars-4"></div>
+    <div class="snow-stars snow-stars-5"></div>
+    
     <div class="navbar-container">
         <nav class="navbar">
             <div class="logo"><img src="images/logo.png" alt="Logo" /></div>
