--- a/login.html
+++ b/login.html
@@ -11,7 +11,7 @@
 <body>
     <div class="login-container">
         <div class="login-box">
-            <h1 class="logo"><img src="images/logo.png" alt="Logo" />BagItUp</h1>
+            <h1 class="logo"><img src="images/newlogo.png" alt="Logo" />BagItUp</h1>
             <h2>Welcome Back</h2>
             <p class="subtitle">Log in to continue shopping in style.</p>
 
@@ -27,6 +27,10 @@
                 </div>
 
                 <a href="home.html" class="login-btn">Login</a>
+                <button type="button" class="google-btn">
+                    <img src="images/google-logo.svg" alt="Google" />
+                    Sign in with Google
+                </button>
             </form>
 
             <p class="register-text">
