product images added

--- a/menswear/mens-tshirts.html
+++ b/menswear/mens-tshirts.html
@@ -38,11 +38,14 @@
             <div class="products-grid">
                 <!-- Product 1 -->
                 <div class="product-card">
-                    <div class="product-image">Eco Cotton Tee</div>
-                    <h3 class="product-name">Organic Cotton Classic Tee</h3>
+                    <div class="product-image">
+                        <img src="../images/products/tshirt1.webp"
+                            alt="Classic Cotton Crew Neck T-Shirt">
+                    </div>
+                    <h3 class="product-name">Crew Neck</h3>
                     <div class="product-price">₹899</div>
-                    <p class="product-description">100% organic cotton t-shirt with a comfortable fit. Made from
-                        sustainably sourced materials.</p>
+                    <p class="product-description">Classic crew neck t-shirt made from premium organic cotton. Perfect
+                        for everyday comfort and style.</p>
                     <button class="add-to-cart-btn">
                         <span class="button-text">Add to Cart</span>
                         <span class="tick-mark">✓</span>
@@ -51,11 +54,14 @@
 
                 <!-- Product 2 -->
                 <div class="product-card">
-                    <div class="product-image">Bamboo Blend Tee</div>
-                    <h3 class="product-name">Bamboo Fiber V-Neck</h3>
-                    <div class="product-price">₹1,199</div>
-                    <p class="product-description">Soft bamboo fiber blend with natural antibacterial properties and
-                        moisture-wicking capabilities.</p>
+                    <div class="product-image">
+                        <img src="../images/products/tshirt2.webp"
+                            alt="Modern V-Neck T-Shirt">
+                    </div>
+                    <h3 class="product-name">V-Neck</h3>
+                    <div class="product-price">₹999</div>
+                    <p class="product-description">Sleek v-neck design crafted from soft, sustainable cotton blend.
+                        Perfect for a modern, casual look.</p>
                     <button class="add-to-cart-btn">
                         <span class="button-text">Add to Cart</span>
                         <span class="tick-mark">✓</span>
@@ -64,11 +70,14 @@
 
                 <!-- Product 3 -->
                 <div class="product-card">
-                    <div class="product-image">Recycled Polyester Tee</div>
-                    <h3 class="product-name">Recycled Performance Tee</h3>
-                    <div class="product-price">₹1,099</div>
-                    <p class="product-description">Made from 100% recycled plastic bottles. Perfect for workouts and
-                        casual wear.</p>
+                    <div class="product-image product-image-polo">
+                        <img src="../images/products/tshirt3.png"
+                            alt="Classic Polo T-Shirt">
+                    </div>
+                    <h3 class="product-name">Polo</h3>
+                    <div class="product-price">₹1,299</div>
+                    <p class="product-description">Premium polo shirt with classic collar design. Made from breathable,
+                        eco-friendly materials.</p>
                     <button class="add-to-cart-btn">
                         <span class="button-text">Add to Cart</span>
                         <span class="tick-mark">✓</span>
@@ -77,52 +86,41 @@
 
                 <!-- Product 4 -->
                 <div class="product-card">
-                    <div class="product-image">Hemp Cotton Blend</div>
-                    <h3 class="product-name">Hemp-Cotton Crew Neck</h3>
-                    <div class="product-price">₹1,299</div>
-                    <p class="product-description">Durable hemp-cotton blend that gets softer with each wash. Naturally
-                        UV resistant.</p>
-                    <button class="add-to-cart-btn">Add to Cart</button>
+                    <div class="product-image">Comfort Henley</div>
+                    <h3 class="product-name">Henley</h3>
+                    <div class="product-price">₹1,199</div>
+                    <p class="product-description">Stylish henley with button placket detail. Made from soft,
+                        sustainable fabric for all-day comfort.</p>
+                    <button class="add-to-cart-btn">
+                        <span class="button-text">Add to Cart</span>
+                        <span class="tick-mark">✓</span>
+                    </button>
                 </div>
 
                 <!-- Product 5 -->
                 <div class="product-card">
-                    <div class="product-image">Tencel Lyocell Tee</div>
-                    <h3 class="product-name">Tencel Lyocell Henley</h3>
-                    <div class="product-price">₹1,399</div>
-                    <p class="product-description">Ultra-soft Tencel Lyocell fabric with natural temperature regulation
-                        and moisture management.</p>
-                    <button class="add-to-cart-btn">Add to Cart</button>
+                    <div class="product-image">Sport Raglan</div>
+                    <h3 class="product-name">Raglan</h3>
+                    <div class="product-price">₹1,099</div>
+                    <p class="product-description">Athletic raglan sleeve design. Perfect for sports and casual wear
+                        with enhanced mobility.</p>
+                    <button class="add-to-cart-btn">
+                        <span class="button-text">Add to Cart</span>
+                        <span class="tick-mark">✓</span>
+                    </button>
                 </div>
 
                 <!-- Product 6 -->
                 <div class="product-card">
-                    <div class="product-image">Peace Silk Blend</div>
-                    <h3 class="product-name">Peace Silk Luxury Tee</h3>
-                    <div class="product-price">₹1,899</div>
-                    <p class="product-description">Premium peace silk blend for ultimate comfort and breathability.
-                        Ethically sourced materials.</p>
-                    <button class="add-to-cart-btn">Add to Cart</button>
-                </div>
-
-                <!-- Product 7 -->
-                <div class="product-card">
-                    <div class="product-image">Organic Linen Tee</div>
-                    <h3 class="product-name">Organic Linen Pocket Tee</h3>
-                    <div class="product-price">₹1,199</div>
-                    <p class="product-description">Breathable organic linen perfect for summer. Features a classic chest
-                        pocket design.</p>
-                    <button class="add-to-cart-btn">Add to Cart</button>
-                </div>
-
-                <!-- Product 8 -->
-                <div class="product-card">
-                    <div class="product-image">Pima Cotton Tee</div>
-                    <h3 class="product-name">Pima Cotton Long Sleeve</h3>
-                    <div class="product-price">₹1,599</div>
-                    <p class="product-description">Extra-long staple Pima cotton for superior softness and durability.
-                        Long sleeve design for versatility.</p>
-                    <button class="add-to-cart-btn">Add to Cart</button>
+                    <div class="product-image">Street Oversized</div>
+                    <h3 class="product-name">Oversized</h3>
+                    <div class="product-price">₹1,399</div>
+                    <p class="product-description">Contemporary oversized fit with dropped shoulders. Perfect for a
+                        modern streetwear look.</p>
+                    <button class="add-to-cart-btn">
+                        <span class="button-text">Add to Cart</span>
+                        <span class="tick-mark">✓</span>
+                    </button>
                 </div>
             </div>
         </div>
