products listed on the home page

--- a/coming-soon.html
+++ b/coming-soon.html
@@ -18,7 +18,7 @@
                 <button><img src="images/searchicon.png" alt="Search" class="search-icon"></button>
             </div>
             <div class="nav-icons">
-                <a href="addtocart.html"><span><img src="images/addtocart.png" class="cart-icon"
+                <a href="addtocart.html"><span><img src="images/addorange-removebg-preview.png" class="cart-icon"
                             alt="Cart" /></span></a>
                 <a href="login.html" class="sign-in-btn">Sign In</a>
             </div>
@@ -27,33 +27,8 @@
 
     <!-- Page Content -->
     <div class="page-container">
-        <div class="page-header">
-            <h1 class="page-title">Coming Soon</h1>
-            <p class="page-subtitle">This category is being curated with the finest sustainable products. Check back
-                soon for amazing eco-friendly options!</p>
-        </div>
-
-        <div class="products-container">
-            <div style="text-align: center; padding: 60px 20px; color: #86868b;">
-                <div style="font-size: 4rem; margin-bottom: 20px;">🌱</div>
-                <h2 style="color: #f5f5f7; margin-bottom: 20px;">We're Working on Something Amazing</h2>
-                <p style="font-size: 1.1rem; max-width: 500px; margin: 0 auto; line-height: 1.6;">
-                    Our team is carefully selecting the most sustainable and high-quality products for this category.
-                    We'll notify you as soon as new items arrive!
-                </p>
-                <div style="margin-top: 40px;">
-                    <a href="home.html" style="
-                        background: linear-gradient(135deg, #9333EA 0%, #7C3AED 100%);
-                        color: white;
-                        text-decoration: none;
-                        padding: 12px 24px;
-                        border-radius: 12px;
-                        font-weight: 500;
-                        display: inline-block;
-                        transition: all 0.2s ease;
-                    ">Browse Other Categories</a>
-                </div>
-            </div>
+        <div class="coming-soon-content">
+            <h1 class="coming-soon-title">Coming Soon</h1>
         </div>
     </div>
 
