--- a/menswear/mens-tshirts.html
+++ b/menswear/mens-tshirts.html
@@ -19,7 +19,7 @@
                 <button><img src="../images/searchicon.png" alt="Search" class="search-icon"></button>
             </div>
             <div class="nav-icons">
-                <a href="../addtocart.html"><span><img src="../images/addtocart.png" class="cart-icon"
+                <a href="../addtocart.html"><span><img src="../images/addorange-removebg-preview.png" class="cart-icon"
                             alt="Cart" /></span></a>
                 <a href="../login.html" class="sign-in-btn">Sign In</a>
             </div>
@@ -86,7 +86,10 @@
 
                 <!-- Product 4 -->
                 <div class="product-card">
-                    <div class="product-image">Comfort Henley</div>
+                    <div class="product-image product-image-tshirt4">
+                        <img src="../images/products/tshirt 4.png"
+                            alt="Comfort Henley T-Shirt">
+                    </div>
                     <h3 class="product-name">Henley</h3>
                     <div class="product-price">₹1,199</div>
                     <p class="product-description">Stylish henley with button placket detail. Made from soft,
