--- a/new-arrivals.html
+++ b/new-arrivals.html
@@ -18,7 +18,7 @@
                 <button><img src="images/searchicon.png" alt="Search" class="search-icon"></button>
             </div>
             <div class="nav-icons">
-                <a href="addtocart.html"><span><img src="images/addtocart.png" class="cart-icon"
+                <a href="addtocart.html"><span><img src="images/addorange-removebg-preview.png" class="cart-icon"
                             alt="Cart" /></span></a>
                 <a href="login.html" class="sign-in-btn">Sign In</a>
             </div>
