added back to home button on login page

--- a/login.html
+++ b/login.html
@@ -37,6 +37,7 @@
                 New to BagItUp? <a href="#">Create an account</a>
             </p>
         </div>
+        <a href="home.html" class="back-to-home-btn">← Back to Home</a>
     </div>
 </body>
 
