--- a/home.html
+++ b/home.html
@@ -20,13 +20,32 @@
         <nav class="navbar">
             <div class="logo"><img src="images/newlogo.png" alt="Logo" /></div>
             <div class="search-bar">
-                <input type="text" id="search" placeholder="Search eco-friendly bags...">
+                <input type="text" id="search" placeholder="Explore our latest sustainable designs">
                 <button><img src="images/searchicon.png" alt="Search" class="search-icon"></button>
             </div>
             <div class="nav-icons">
                 <a href="addtocart.html"><span><img src="images/addorange-removebg-preview.png" class="cart-icon"
                             alt="Cart" /></span></a>
                 <a href="login.html" class="sign-in-btn">Sign In</a>
+                <div class="menu-container">
+                    <button class="menu-btn" id="menu-btn">
+                        <img src="images/3_lines_icon-removebg-preview.png" alt="Menu" class="menu-icon">
+                    </button>
+                    <div class="menu-dropdown">
+                        <a href="#settings" class="menu-item">
+                            <img src="images/settingixon.png" alt="Settings" class="menu-item-icon">
+                            <span>Settings</span>
+                        </a>
+                        <a href="#orders" class="menu-item">
+                            <img src="images/myorder.png" alt="Orders" class="menu-item-icon">
+                            <span>My Orders</span>
+                        </a>
+                        <a href="#addresses" class="menu-item">
+                            <img src="images/address.png" alt="Addresses" class="menu-item-icon">
+                            <span>Saved Addresses</span>
+                        </a>
+                    </div>
+                </div>
             </div>
         </nav>
     </div>
@@ -105,31 +124,36 @@
             <div class="product-showcase-card left-card">
                 <div class="image-rotator" id="left-rotator">
                     <img src="images/beige-removebg-preview.png" alt="Beige Product" class="rotating-image active">
-                    <img src="images/black-removebg-preview.png" alt="Black Product" class="rotating-image black-image-large">
                     <img src="images/blue-removebg-preview.png" alt="Blue Product" class="rotating-image">
                     <img src="images/maroon-removebg-preview.png" alt="Maroon Product" class="rotating-image">
                     <img src="images/shirt-removebg-preview.png" alt="Shirt Product" class="rotating-image">
-                    <button class="nav-arrow nav-arrow-left" data-rotator="left-rotator" data-direction="prev">‹</button>
-                    <button class="nav-arrow nav-arrow-right" data-rotator="left-rotator" data-direction="next">›</button>
+                    <img src="images/jacket-removebg-preview.png" alt="Jacket Product" class="rotating-image">
+                    <button class="nav-arrow nav-arrow-left" data-rotator="left-rotator"
+                        data-direction="prev">‹</button>
+                    <button class="nav-arrow nav-arrow-right" data-rotator="left-rotator"
+                        data-direction="next">›</button>
                 </div>
             </div>
 
             <!-- Center Title -->
             <div class="center-title">
                 <h1 class="website-title">BagItUp</h1>
+                <p class="tagline">Style Meets Sustainability</p>
                 <div class="title-accent"></div>
             </div>
 
             <!-- Right Product Card -->
             <div class="product-showcase-card right-card">
                 <div class="image-rotator" id="right-rotator">
-                    <img src="images/placeholder-right1.jpg" alt="Product 1" class="rotating-image active">
-                    <img src="images/placeholder-right2.jpg" alt="Product 2" class="rotating-image">
-                    <img src="images/placeholder-right3.jpg" alt="Product 3" class="rotating-image">
-                    <img src="images/placeholder-right4.jpg" alt="Product 4" class="rotating-image">
-                    <img src="images/placeholder-right5.jpg" alt="Product 5" class="rotating-image">
-                    <button class="nav-arrow nav-arrow-left" data-rotator="right-rotator" data-direction="prev">‹</button>
-                    <button class="nav-arrow nav-arrow-right" data-rotator="right-rotator" data-direction="next">›</button>
+                    <img src="images/bluepant.png" alt="Blue Pant" class="rotating-image active">
+                    <img src="images/greeepant.png" alt="Green Pant" class="rotating-image">
+                    <img src="images/greypant.png" alt="Grey Pant" class="rotating-image">
+                    <img src="images/jogger.png" alt="Jogger" class="rotating-image">
+                    <img src="images/beige pant.png" alt="Beige Pant" class="rotating-image">
+                    <button class="nav-arrow nav-arrow-left" data-rotator="right-rotator"
+                        data-direction="prev">‹</button>
+                    <button class="nav-arrow nav-arrow-right" data-rotator="right-rotator"
+                        data-direction="next">›</button>
                 </div>
             </div>
         </div>
